########################################################################################################################

# continue processing other CMakeLists files
#
add_subdirectory(${TEST_UTILS_DIRECTORY})
add_subdirectory(${UNIT_TEST_DIRECTORY})
add_subdirectory(${INTEGRATION_TEST_DIRECTORY})

########################################################################################################################
