########################################################################################################################

# continue processing other CMakeLists files
#
add_subdirectory(${TEST_UTILS_DIRECTORY})
add_subdirectory(${TEST_INTEGRATION_DIRECTORY})
add_subdirectory(${TEST_UNIT_DIRECTORY})

########################################################################################################################
